fixed missing padding in traffic section

--- a/css/affiliates_admin.css
+++ b/css/affiliates_admin.css
@@ -128,6 +128,7 @@ a.removefromaffiliate {
 .hits-overview,
 .hits-affiliates-overview,
 .manage-affiliates,
+.hits-uris-overview,
 .referrals-overview {
 	padding-right: 1em;
 }
